testsuite/gnatprove/tests/S314-023__outofmemory/test.out
a-cofuse.ads:243:22: info: overflow check proved (CVC4: 1 VC), in instantiation at tree_model.ads:78
a-cofuse.ads:244:26: info: overflow check proved (CVC4: 1 VC), in instantiation at tree_model.ads:78
a-cofuve.ads:230:54: info: overflow check proved (CVC4: 1 VC), in instantiation at tree_model.ads:22
a-cofuve.ads:235:63: info: range check proved (CVC4: 1 VC), in instantiation at tree_model.ads:22
a-cofuve.ads:236:59: info: overflow check proved (CVC4: 1 VC), in instantiation at tree_model.ads:22
a-cofuve.ads:236:76: info: overflow check proved (CVC4: 1 VC), in instantiation at tree_model.ads:22
a-cofuve.ads:237:30: info: range check proved (CVC4: 1 VC), in instantiation at tree_model.ads:22
a-cofuve.ads:298:52: info: overflow check proved (CVC4: 1 VC), in instantiation at tree_model.ads:22
tree_model.ads:41:18: info: overflow check proved (CVC4: 1 VC)
tree_model.ads:42:49: info: precondition proved (CVC4: 2 VC)
tree_model.ads:42:62: info: precondition proved (CVC4: 2 VC)
tree_model.ads:44:18: info: precondition proved (CVC4: 2 VC)
tree_model.ads:44:28: info: overflow check proved (CVC4: 1 VC)
tree_model.ads:44:44: info: precondition proved (CVC4: 2 VC)
tree_model.ads:45:41: info: overflow check proved (CVC4: 1 VC)
tree_model.ads:46:18: info: precondition proved (CVC4: 2 VC)
tree_model.ads:46:28: info: overflow check proved (CVC4: 1 VC)
tree_model.ads:46:28: info: range check proved (CVC4: 1 VC)
tree_model.ads:46:44: info: precondition proved (CVC4: 2 VC)
tree_model.ads:46:52: info: range check proved (CVC4: 1 VC)
tree_model.ads:59:16: info: precondition proved (CVC4: 2 VC)
tree_model.ads:63:06: info: data dependencies proved
tree_model.ads:67:14: info: postcondition proved (CVC4: 1 VC)
tree_model.ads:71:06: info: data dependencies proved
tree_model.ads:73:17: info: precondition proved (CVC4: 1 VC)
tree_model.ads:76:14: info: postcondition proved (CVC4: 1 VC)
tree_model.ads:76:14: info: precondition proved (CVC4: 1 VC)

Backtrace is the following:
gnatprove: Fatal error: out of memory
gnatprove: Fatal error: out of memory
gnatprove: anomaly: Out of memory
gnatprove: error during flow analysis and proof
